--- a/src/styles.css
+++ b/src/styles.css
@@ -339,10 +339,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width:280px;
-  height:50px;
-  line-height:50px;
+  height:30px;
+  line-height:30px;
   text-align: center;
-  font-size: auto;
+  font-size-adjust: 0.74;
 }
 .ssoItemHeader{
   padding-top: 10px;
