--- a/src/styles.css
+++ b/src/styles.css
@@ -338,11 +338,11 @@ body {
   padding-right: 40px;
   padding-top: 10px;
   padding-bottom: 10px;
-  width:280px;
-  height:30px;
-  line-height:30px;
+  width:300px;
+  height:50px;
+  line-height:50px;
   text-align: center;
-  font-size-adjust: 0.74;
+  font-size: 16px;
 }
 .ssoItemHeader{
   padding-top: 10px;
